# tsr-2024-1

./: .gitignore  Readme.md
docs/: Go2Point.drawio  ROSActionClient.drawio  ROSActionServer.drawio  dltme.md
dofbot_config/: .setup_assistant  package.xml
dofbot_config/config/: dofbot_arm.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
dofbot_config/launch/: demo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
dofbot_config/scripts/: demo_motion_plan.py
dofbot_description/: CMakeLists.txt  package.xml
dofbot_description/urdf/: dofbot_arm.urdf  dofbot_arm_moveit.urdf
dofbot_ws/: Readme.md
dofbot_ws/dofbot_description/: CMakeLists.txt  package.xml
maps/: README.md  turtle_world_map.pgm  turtle_world_map.yaml
publicador/: CMakeLists.txt  package.xml
publicador/scripts/: demo_pub.py  demo_sub.py
raspuma_description/: CMakeLists.txt  package.xml
raspuma_description/config/: joint_names_CAD_Rasbot_URDF.yaml
raspuma_description/launch/: display.launch
raspuma_description/meshes/: base_link.STL  camera.STL  right_wheel.STL
raspuma_description/urdf/: raspuma.gazebo.xacro  raspuma2_urdf.xacro
raspuma_ws/: README.md
tb3_ctrl/: CMakeLists.txt  package.xml
tb3_ctrl/config/: param_raw.yaml  tb3cmd_params.yaml
tb3_move/: CMakeLists.txt  package.xml
tb3_move/action/: Tb3Move.action
tb3_move/scripts/: tb3move_action_client.py  tb3move_action_server.py
(+32 files in other folders)
